<resources>
    <string name="app_name">MyTestAPP</string>
    <string name="onloadWord">引导页制作。。。</string>
    <string name="startApp">开始我的APP</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码?</string>
    <string name="justlook">随便看看</string>
    <string name="register_username">请填写用户名</string>
    <string name="register_password">请填写密码</string>
    <string name="username">用户名：</string>
    <string name="loginMsg_success">登陆成功，跳转主界面</string>
    <string name="loginMsg_failed">登陆失败，请重试</string>
    <string name="registerMsg_success">注册成功，跳转主界面</string>
    <string name="registerMsg_failed">注册失败，请重试</string>
    <string name="password">密码：</string>
    <string name="main_tian_mao">天猫</string>
    <string name="main_care">关注</string>
    <string name="main_fan">范儿</string>
    <string name="main_shop_car">购物车</string>
    <string name="main_mine">我</string>
    <string name="erweima">扫码</string>
    <string name="message">消息</string>
    <string name="main_mine_data">个人资料</string>
    <string name="main_mine_bound">账号绑定</string>
    <string name="main_mine_collection">我的收藏</string>
    <string name="main_mine_integral">我的积分</string>
    <string name="main_mine_order">我的订单</string>
    <string name="main_mine_setting">设置</string>
    <string name="main_mine_car">购物车</string>
    <string name="main_mine_choose">推荐有礼</string>
    <string name="back">返回</string>
    <string name="main_mine_data_head">头像</string>
    <string name="main_mine_data_nickname">昵称</string>
    <string name="main_mine_data_receiverAddress">收货地址管理</string>
    <string name="main_mine_data_contactWay">联系方式</string>
    <string name="main_mine_data_loginPassword">登陆密码</string>
</resources>
