<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:background="@drawable/auth_top_bg">
    <!-- 天猫按钮布局 -->
    <LinearLayout
        android:id="@+id/ll_main_tian_mao"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/ibtn_main_tian_mao"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="3dp"
            android:src="@drawable/main_tian_mao_normal" />

        <TextView
            android:id="@+id/tv_main_tian_mao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/main_tian_mao"
            android:textColor="#002120" />
    </LinearLayout>
    <!-- 关注按钮布局 -->
    <LinearLayout
        android:id="@+id/ll_main_care"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/ibtn_main_care"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="3dp"
            android:src="@drawable/main_care_normal" />

        <TextView
            android:id="@+id/tv_main_care"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/main_care"
            android:textColor="#002120" />
    </LinearLayout>
    <!-- 范儿按钮布局 -->
    <LinearLayout
        android:id="@+id/ll_main_fan"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton

            android:id="@+id/ibtn_main_fan"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="3dp"
            android:src="@drawable/main_fan_normal" />

        <TextView
            android:id="@+id/tv_main_fan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/main_fan"
            android:textColor="#002120" />
    </LinearLayout>
    <!-- 购物车按钮布局 -->
    <LinearLayout
        android:id="@+id/ll_main_shop_car"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton

            android:id="@+id/ibtn_main_shop_car"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="3dp"
            android:src="@drawable/main_shop_car_normal" />

        <TextView
            android:id="@+id/tv_main_shop_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/main_shop_car"
            android:textColor="#002120" />
    </LinearLayout>
    <!-- 我的按钮布局 -->
    <LinearLayout
        android:id="@+id/ll_main_mine"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton

            android:id="@+id/ibtn_main_mine"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="3dp"
            android:src="@drawable/main_mine_normal" />

        <TextView
            android:id="@+id/tv_main_mine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/main_mine"
            android:textColor="#002120" />

    </LinearLayout>

</LinearLayout>
