<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_mine_bg"
    tools:context="net.csdn.my.fragment.MineFragment">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="50.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:paddingTop="10.0dip">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TableLayout
                    android:id="@+id/MorePageTableLayout_Favorite"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:shrinkColumns="0"
                    android:stretchColumns="0">

                    <TableRow
                        android:id="@+id/tr_main_mine_data"
                        android:layout_width="fill_parent"
                        android:layout_marginBottom="3dp"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:background="@drawable/more_item_press"
                        android:clickable="true"
                        android:paddingBottom="16.0dip"
                        android:paddingTop="8.0dip">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:drawableLeft="@drawable/myfollow"
                            android:drawablePadding="10.0dip"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:paddingLeft="17.0dip"
                            android:text="@string/main_mine_data"
                            android:textColor="#ff333333"
                            android:textSize="16.0sp" />

                        <ImageView
                            android:id="@+id/ibtn_main_mine_data"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="right"
                            android:gravity="center_vertical"
                            android:paddingRight="@dimen/arrow_padding"
                            android:src="@drawable/ic_arrow" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TableLayout
                    android:id="@+id/MorePageTableLayout_Follow"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="1.0dip"
                    android:shrinkColumns="0"
                    android:stretchColumns="0">

                    <TableRow
                        android:id="@+id/tr_main_mine_order"
                        android:layout_width="fill_parent"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:background="@drawable/more_itemtop_press"
                        android:clickable="true"
                        android:paddingBottom="16.0dip"
                        android:paddingTop="16.0dip">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:drawableLeft="@drawable/main_mine_order"
                            android:drawablePadding="10.0dip"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:paddingLeft="17.0dip"
                            android:text="@string/main_mine_order"
                            android:textColor="#ff333333"
                            android:textSize="16.0sp" />

                        <ImageView
                            android:id="@+id/ibtn_main_mine_order"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="right"
                            android:gravity="center_vertical"
                            android:paddingRight="@dimen/arrow_padding"
                            android:src="@drawable/ic_arrow" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tr_main_mine_car"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:background="@drawable/more_itemmid_press"
                        android:clickable="true"
                        android:paddingBottom="16.0dip"
                        android:paddingTop="16.0dip">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:drawableLeft="@drawable/main_mine_car"
                            android:drawablePadding="10.0dip"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:paddingLeft="17.0dip"
                            android:text="@string/main_mine_car"
                            android:textColor="#ff333333"
                            android:textSize="16.0sp" />

                        <ImageView
                            android:id="@+id/ibtn_main_mine_car"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="right"
                            android:gravity="center_vertical"
                            android:paddingRight="@dimen/arrow_padding"
                            android:src="@drawable/ic_arrow" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tr_main_mine_collection"
                        android:layout_width="fill_parent"
                        android:layout_marginBottom="3dp"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:background="@drawable/more_itembottom_press"
                        android:clickable="true"
                        android:paddingBottom="16.0dip"
                        android:paddingTop="16.0dip">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:drawableLeft="@drawable/main_mine_collection"
                            android:drawablePadding="10.0dip"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:paddingLeft="17.0dip"
                            android:text="@string/main_mine_collection"
                            android:textColor="#ff333333"
                            android:textSize="16.0sp" />

                        <ImageView
                            android:id="@+id/ibtn_main_mine_collection"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="right"
                            android:gravity="center_vertical"
                            android:paddingRight="@dimen/arrow_padding"
                            android:src="@drawable/ic_arrow" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TableLayout
                    android:id="@+id/MorePageTableLayout_Client"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="1.0dip"
                    android:shrinkColumns="0"
                    android:stretchColumns="0">

                    <TableRow
                        android:id="@+id/tr_main_mine_bound"
                        android:layout_width="fill_parent"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:background="@drawable/more_itemtop_press"
                        android:clickable="true"
                        android:paddingBottom="16.0dip"
                        android:paddingTop="16.0dip">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:drawableLeft="@drawable/main_mine_bound"
                            android:drawablePadding="10.0dip"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:paddingLeft="17.0dip"
                            android:text="@string/main_mine_bound"
                            android:textColor="#ff333333"
                            android:textSize="16.0sp" />

                        <ImageView
                            android:id="@+id/ibtn_main_mine_bound"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="right"
                            android:gravity="center_vertical"
                            android:paddingRight="@dimen/arrow_padding"
                            android:src="@drawable/ic_arrow" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tr_main_mine_integral"
                        android:layout_width="fill_parent"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:background="@drawable/more_itemmid_press"
                        android:clickable="true"
                        android:paddingBottom="16.0dip"
                        android:paddingTop="16.0dip">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:drawableLeft="@drawable/main_mine_integral"
                            android:drawablePadding="10.0dip"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:paddingLeft="17.0dip"
                            android:text="@string/main_mine_integral"
                            android:textColor="#ff333333"
                            android:textSize="16.0sp" />

                        <ImageView
                            android:id="@+id/ibtn_main_mine_integral"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="right"
                            android:gravity="center_vertical"
                            android:paddingRight="@dimen/arrow_padding"
                            android:src="@drawable/ic_arrow" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tr_main_mine_choose"
                        android:layout_width="fill_parent"
                        android:layout_marginBottom="3dp"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:background="@drawable/more_itemmid_press"
                        android:clickable="true"
                        android:paddingBottom="16.0dip"
                        android:paddingTop="16.0dip">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:drawableLeft="@drawable/main_mine_choose"
                            android:drawablePadding="10.0dip"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:paddingLeft="17.0dip"
                            android:text="@string/main_mine_choose"
                            android:textColor="#ff333333"
                            android:textSize="16.0sp" />

                        <ImageView
                            android:id="@+id/ibtn_main_mine_choose"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="right"
                            android:gravity="center_vertical"
                            android:paddingRight="@dimen/arrow_padding"
                            android:src="@drawable/ic_arrow" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tr_main_mine_setting"
                        android:layout_width="fill_parent"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:background="@drawable/more_itembottom_press"
                        android:clickable="true"
                        android:paddingBottom="16.0dip"
                        android:paddingTop="16.0dip">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:drawableLeft="@drawable/main_mine_setting"
                            android:drawablePadding="10.0dip"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:paddingLeft="17.0dip"
                            android:text="@string/main_mine_setting"
                            android:textColor="#ff333333"
                            android:textSize="16.0sp" />

                        <ImageView
                            android:id="@+id/ibtn_main_mine_setting"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="right"
                            android:gravity="center_vertical"
                            android:paddingRight="@dimen/arrow_padding"
                            android:src="@drawable/ic_arrow" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
